tests/ui/coverage-attr/bad-attr-ice.nofeat.stderr
error: malformed `coverage` attribute input
  --> $DIR/bad-attr-ice.rs:11:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error[E0658]: the `#[coverage]` attribute is an experimental feature
  --> $DIR/bad-attr-ice.rs:11:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
   = note: see issue #84605 <https://github.com/rust-lang/rust/issues/84605> for more information
   = help: add `#![feature(coverage_attribute)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
